--- a/mmansion/assets/strings.yaml
+++ b/mmansion/assets/strings.yaml
@@ -132,3 +132,11 @@
 131: broken chandelier
 132: old rusty key
 133: I can't reach it.
+134: old fashion radio
+135: Easy!
+136: grate
+137: The door is locked.
+138: swimming pool
+139: I don't want to get wet!
+140: I'M not going down there…
+141: gate
