--- a/mmansion/assets/strings.yaml
+++ b/mmansion/assets/strings.yaml
@@ -140,3 +140,6 @@
 139: I don't want to get wet!
 140: I'M not going down there…
 141: gate
+142: garage door
+143: It's already opened.
+144: It's too high to reach.
