--- a/kq1/assets/rooms.yaml
+++ b/kq1/assets/rooms.yaml
@@ -1,4 +1,6 @@
 start:
+  # walkarea is a polygon where both player and npcs are allowed to walk
+  # it can include holes. A hole can be forbidden for player and npc or for npc only
   walkarea:
     poly: [0,0, 288, 0, 288, 10, 316,10, 316,128, 164,128,164,20,0,20]
   items:
@@ -16,7 +18,10 @@ start:
         baseline: [65,0,85,0]
 test3d:
   walkarea:
-    poly: [1,1,315,1,315,165,1,165]
+    poly: [10, 10, 306, 10, 306, 156, 10, 156]
+    holes:
+      - poly: [20, 20, 30, 20, 30, 30, 20, 30]
+
   items:
     - type: bg
       batch: "test3d"
