--- a/kq1/assets/items.yaml
+++ b/kq1/assets/items.yaml
@@ -11,7 +11,11 @@ items:
     type: node
     parent: room_rock
     pos: '@[236, 21 if item.moved else 33, 0]'
-    auto_depth: True
+    #auto_depth: True
+    baseline: &rock [0,3,10,0,26,0,34,3]
+    hole:
+      path: *rock
+
     moved: False
     quad:
       batch: rock
@@ -19,6 +23,18 @@ items:
     actions:
       push: push_rock
       look: [msg, {'lines': [10]}]
+  dagger:
+    type: node
+    active: '@items.rock.moved'
+    parent: room_rock
+    actions:
+      get: [add_to_inventory, {'lines': [17]}]
+      look: [look_item, {'held': [18], 'not_held': [20], 'image': 'sprites/item_dagger'}]
+  hole:
+    type: node
+    parent: room_rock
+    actions:
+      look: [msg, {'lines': '@[15] if items.rock.moved else [14]'}]
   room_castle:
     walkareas:
     - poly: [0,10,20,10,20,0,316,0,316,20,260,20,251,47,203,47,191,20,128,20,149,46,149,130,0,130,0,20]
@@ -59,7 +75,28 @@ items:
       - type: node
         sprite: 'sprites/flag3'
         pos: [286,155,0]
-
+  room_goldegg:
+    walkareas:
+      - poly: [0, 0, 316, 0, 316, 166, 0, 166]
+    #west: wolf
+    #east: gardenw
+    south:
+      room: room_rock
+    #north: doorclou
+    items:
+      - type: node
+        pos: [0, 0, -1]
+        quad:
+          batch: 'goldegg'
+          coords: [0, 0, 316, 166]
+      - type: node      # tree
+        pos: [130,7, 0]
+        quad:
+          batch: "goldegg"
+          coords: [128,168,186,159]
+        baseline: &tree1 [29,8,68,8,69,7,80,7,80,0,87,0,111,7,179,10]
+        hole:
+          path: *tree1
   room_start:
     # walkarea is a polygon where both player and npcs are allowed to walk
     # it can include holes. A hole can be forbidden for player and npc or for npc only
@@ -127,12 +164,38 @@ items:
       - poly: [ 0,0,316,0,316,166,0,166 ]
     east:
       room: room_castle
+    north:
+      room: room_goldegg
     items:
       - type: node
         pos: [ 0, 0, -1 ]
         quad:
           batch: "rock"
           coords: [ 0, 0, 316, 166 ]
+      - type: node      # tree
+        batch: "rock"
+        auto_depth: true
+        quad:
+          batch: 'rock'
+          coords: [0,194,64,138]
+      - type: node      # tree
+        auto_depth: true
+        pos: [130,71, 0]
+        quad:
+          batch: 'rock'
+          coords: [80,195,98,36]
+      - type: node      # tree
+        auto_depth: true
+        pos: [242,87, 0]
+        quad:
+          batch: 'rock'
+          coords: [194,198,74,79]
+      - type: node
+        auto_depth: True
+        pos: [120,107,0]
+        quad:
+          batch: 'rock'
+          coords: [81,237,60,58]
     actions:
       look_tree: [msg, {'lines': [11]}]
   room_test3d:
