--- a/kq1/assets/items.yaml
+++ b/kq1/assets/items.yaml
@@ -75,14 +75,67 @@ items:
       - type: node
         sprite: 'sprites/flag3'
         pos: [286,155,0]
+  room_gardenw:
+    walkareas:
+      - poly: [ 0,0,316,0,316,166,0,166 ]
+    west:
+      room: room_goldegg
+    south:
+      room: room_castle
+    items:
+      - type: node
+        pos: [ 0, 0, -1 ]
+        quad:
+          batch: "gardenw"
+          coords: [ 0, 0, 316, 166 ]
+      - type: node      # fence --
+        batch: "gardenw"
+        pos: [44, 35, 0]
+        quad:
+          batch: 'gardenw'
+          coords: [1,167,139,89]
+        baseline: [0,0,18,0,139,72]
+        hole:
+          poly: [0,0,18,0,139,72,121,72]
+      - type: node      # fence
+        batch: "gardenw"
+        pos: [182,107,0]
+        quad:
+          batch: gardenw
+          coords: [144,217,134,17]
+        baseline: [0,0,134,0]
+        hole:
+          path: [0,0,134,0,134,2,0,2]
+      - type: node      # tree
+        auto_depth: true
+        pos: [78,79,0]
+        quad:
+          batch: "gardenw"
+          coords: [147,168,66,43]
+
+      - type: node      # tree
+        pos: [0,92,1]
+        quad:
+          batch: "gardenw"
+          coords: [144,235,82,74]
+      - type: node      # tree
+        pos: [250,123,0.307]
+        quad:
+          batch: "gardenw"
+          coords: [228,235,50,43]
+
   room_goldegg:
     walkareas:
       - poly: [0, 0, 316, 0, 316, 166, 0, 166]
     #west: wolf
-    #east: gardenw
+    east:
+      room: room_gardenw
     south:
       room: room_rock
     #north: doorclou
+    actions:
+      look_tree: [msg, {'lines': [21]}]
+      climb_tree: [climb_tree, {'area': [156,7,307,16], 'outside_area_msg': 22}]
     items:
       - type: node
         pos: [0, 0, -1]
@@ -94,9 +147,28 @@ items:
         quad:
           batch: "goldegg"
           coords: [128,168,186,159]
-        baseline: &tree1 [29,8,68,8,69,7,80,7,80,0,87,0,111,7,179,10]
+        baseline: &tree1 [29,8,68,8,69,7,80,7,80.1,0,87,0,111,7,179,10]
         hole:
-          path: *tree1
+          trapezoid: *tree1
+          y_max: 15
+      - type: node      # bush1
+        auto_depth: True
+        pos: [142,47, 0]
+        quad:
+          batch: "goldegg"
+          coords: [2,167,76,46]
+      - type: node      # tree2
+        auto_depth: True
+        pos: [62,86, 0]
+        quad:
+          batch: "goldegg"
+          coords: [3,216,80,80]
+      - type: node      # bush2
+        auto_depth: True
+        pos: [134,87, 0]
+        quad:
+          batch: "goldegg"
+          coords: [3,297,48,26]
   room_start:
     # walkarea is a polygon where both player and npcs are allowed to walk
     # it can include holes. A hole can be forbidden for player and npc or for npc only
