--- a/kq1/assets/sprites.yaml
+++ b/kq1/assets/sprites.yaml
@@ -272,7 +272,28 @@ sprites:
             anchor: [9, 0]
           - tex: [310, 98, 16, 30]
             anchor: [9, 0]
-
+  ogre:
+    animations:
+      walk:
+        frames:
+          - tex: [259,130,22,27]
+            anchor: [12, 0]
+          - tex: [282,134,18,23]
+            anchor: [12, 0]
+          - tex: [301,134,24,23]
+            anchor: [14, 0]
+          - tex: [326,134,22,23]
+            anchor: [12, 0]
+          - tex: [349,134,22,23]
+            anchor: [12, 0]
+          - tex: [259,158,24,23]
+            anchor: [12,0]
+          - tex: [284,158,26,23]
+            anchor: [14, 0]
+          - tex: [311,158,26,23]
+            anchor: [16, 0]
+          - tex: [338,158,26,23]
+            anchor: [18, 0]
   gnome:
     animations:
       walk:
