--- a/kq1/assets/strings.yaml
+++ b/kq1/assets/strings.yaml
@@ -54,3 +54,5 @@ strings:
   21: This is a very large oak tree with branches stretching to the sky.
   22: You can't climb a tree here!
   23: OK
+  24: Watch out!!! There is an ogre nearby! He will crush you in his strong arms if he catches you.
+  25: You were warned to be careful around this fierce creature! Maybe next time you will be able to elude the beast.
