--- a/kq1/assets/items.yaml
+++ b/kq1/assets/items.yaml
@@ -23,6 +23,20 @@ items:
     actions:
       push: push_rock
       look: [msg, {'lines': [10]}]
+  carrot_w:
+    type: node
+    parent: room_gardenw
+    link: carrot
+  carrot_e:
+    type: node
+    parent: room_gardene
+    link: carrot
+  carrot:
+    type: node
+    actions:
+      get: [add_to_inventory, {'lines': [28]}]
+      look: [look_item, {'held': [29], 'not_held': [27], 'image': 'sprites/item_carrot'}]
+
   dagger:
     type: node
     active: '@items.rock.moved'
@@ -84,13 +98,33 @@ items:
       - type: node
         sprite: 'sprites/flag3'
         pos: [286,155,0]
+  room_gardene:
+    walkareas:
+      - poly: [ 0,0,316,0,316,166,0,166 ]
+    south:
+      room: room_start
+    west:
+      room: room_gardenw
+    #east: fairy
+    #north: cliff
+    items:
+      - type: node
+        pos: [ 0, 0, -1 ]
+        quad:
+          batch: "gardene"
+          coords: [ 0, 0, 316, 166 ]
   room_gardenw:
     walkareas:
       - poly: [ 0,0,316,0,316,166,0,166 ]
     west:
       room: room_goldegg
+    east:
+      room: room_gardene
     south:
       room: room_castle
+    actions:
+      look_garden: [msg, {'lines': [26]}]
+
     items:
       - type: node
         pos: [ 0, 0, -1 ]
